# AutoQuote

./: .gitignore  LICENSE  README.md  gui.py  main.py  pyproject.toml  requirements.txt  test_api.py  tests.py  参考文献引用格式.md
gbt7714/: __init__.py  formatters.py  models.py  parser.py
webapp/: __init__.py  main.py
webapp/static/: style.css
webapp/templates/: base.html  index.html
