[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoquote-gbt7714"
version = "0.1.0"
description = "GB/T 7714-2015 citation parser & formatter (GB/T / APA / BibTeX) with LaTeX bibitem output"
readme = "README.md"
authors = [{name="Nescript"}]
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["gbt7714", "citation", "bibtex", "apa", "reference", "latex"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research"
]

[project.urls]
Homepage = "https://github.com/Nescript/AutoQuote"
Issues = "https://github.com/Nescript/AutoQuote/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gbt7714*"]

[project.scripts]
autoquote-cli = "main:main"
